# SaddleMill

./: .gitignore  CLAUDE.md  GEMINI.md  LICENSE  README.md  pyproject.toml
examples/Dimer_LeMatBulk/: run_perlmutter.sh
examples/Dimer_OC22/: run_perlmutter.sh  run_vista.sh
examples/Dimer_VASP_OC20/: config.ini
examples/DoubleMinimization_OC22/: run_perlmutter.sh  run_vista.sh
examples/DoubleMinimization_PreDimer_OC22/: config.ini  run_perlmutter.sh  run_vista.sh  sched-fluxion-qmanager.toml
examples/Minimization/: config.ini
examples/NEB_MP20Bat/: run_ls6.sh  run_perlmutter.sh
examples/NEB_VASP_OC20NEB/: config.ini  run_ls6.sh
examples/SinglePoint_LMDB_MP20Bat/: config.ini  prepare_input.sh  run_vista.sh
saddlemill/: __main__.py  analyze_neb.py  config.py  dimeropt.py  geomopt.py  init_function.py  nebopt.py  status.py  tools.py  vasp_input_generators.py  vasp_io.py
scripts/: backfill_status.py  compare_basin_entry_vs_doublemin.py  consolidate_dimer_basin_entry.py  consolidate_dimer_init.py  make_comparison_trajs.py  make_traj_datasets.py  measure_dataset23.py
tests/: conftest.py  test_ase_vasp_incar.py  test_config.py  test_dimeropt_integration.py  test_geomopt_integration.py  test_init_function.py  test_kappa_changes.py  test_main_integration.py  test_nebopt_integration.py  test_ocpneb.py  test_spc_wrap_ordering.py  test_structure_edit.py  test_tools.py  test_vasp_input_generators.py  test_vasp_io.py
tsearch/: __main__.py  analyze_neb.py  config.py  dimer.py  dimeropt.py  geomopt.py  init_function.py  nebopt.py  opt.py  status.py  tools.py
(+88 files in other folders)
